[package]
name = "rayso-rs"
version = "0.1.1"
edition = "2021"

description = "An 'API' helper for Rayso"
keywords = ["api", "rayso", "thirtyfour", "tokio", "urlencoding"]
repository = "https://github.com/BenMcAvoy/RaysoRS"
categories = ["multimedia::images", "config"]
license = "MIT"

[dependencies]
base64 = "0.22.0"
structopt = "0.3.26"
thirtyfour = "0.31.0"
tokio = { version = "1.36.0", features = ["full"] }
urlencoding = "2.1.3"
